fix qna
